# todostateful

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  Taskfile.yml  build.sh  docker-compose.override.yml  docker-compose.yml  kubernetes.yaml  local.env  minikube-setup.sh  pyproject.toml  setup.cfg
docs/: domainModel.puml  usecases.puml
scripts/: build-docker.sh  build.sh  init.sh  linter.sh  run-docker.sh  test.sh
tests/: test_todostateful.py
todostateful/: __init__.py  configs.py  container.py  core.py  database.py  domain_model.py  main.py  model.py  mongo.py  rest_app.py  service_layer.py  shared.py
todostateful/adapters/: db.py  migrate_db.py  mongo.py
todostateful/apps/rest/: main.py  rest_container.py
todostateful/domain/: domain.py  exceptions.py  repositories.py  services.py
todostateful/domain/repositories/: task.py  user.py
todostateful/domain/services/: auth.py
todostateful/domain/todo/repositories/: task.py  user.py
todostateful/domain/todo/services/: auth.py
todostateful/domain/todo/usecases/: tasks.py  user.py
todostateful/libraries/: db.py  shared.py
todostateful/routers/: task.py  user.py
todostateful/services/: auth.py  task.py  user.py
