[tool.poetry]
name = "todostateful"
version = "0.1.0"
description = "docker_build_lab"
authors = ["Alexey Gonchar <tumberum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
pydantic = "^1.9.0"
orjson = "^3.6.8"
email-validator = "^1.2.0"
uvicorn = {extras = ["standart"], version = "^0.17.6"}
sentry-sdk = "^1.5.10"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.950"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.3"
pytest-randomly = "^3.11.0"
safety = "^1.10.3"
isort = "^5.10.1"
wemake-python-styleguide = "^0.16.1"
flake8-SQL = "^0.4.1"
autopep8 = "^1.6.0"
add-trailing-comma = "^2.2.3"
pre-commit = "^2.18.1"
flake8-pytest-style = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
