[tool.poetry]
name = "todostateful"
version = "0.1.0"
description = "todostateful"
authors = ["Alexey Gonchar <tumberum@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.76.0"
pydantic = "^1.9.0"
orjson = "^3.6.8"
email-validator = "^1.2.1"
uvicorn = { extras = ["standart"], version = "^0.17.6" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
python-dotenv = "^0.20.0"
alembic = "^1.7.7"
punq = "^0.6.2"
beanie = "^1.11.0"
dependency-injector = "^4.39.1"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.3"
pytest-randomly = "^3.12.0"
pytest-mock = "^3.7.0"
mypy = "^0.950"
black = "^22.3.0"
safety = "^1.10.3"
bandit = "^1.7.4"
pre-commit = "^2.19.0"


[tool.black]
line-length = 80
target-version = ['py310']


[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
implicit_reexport = false
no_implicit_optional = true
local_partial_types = true
strict_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
allow_redefinition = false
allow_untyped_globals = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
ignore_errors = false
strict_concatenate = true
warn_no_return = true
pretty = true
show_column_numbers = true
show_error_codes = true


[tool.pytest.ini_options]
norecursedirs = [
  "*.egg",
  ".eggs",
  "dist",
  "build",
  "docs",
  ".tox",
  ".git",
  "__pycache__",
]
xfail_strict = true
asyncio_mode = "strict"
addopts = """ \
  --strict-markers \
  --strict-config \
  --tb=short \
  --doctest-modules \
  --cov=src \
  --cov-report=term:skip-covered \
  --cov-branch \
"""


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
